--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mysql2": "^1.5.2",
+    "path": "^0.12.7",
     "sequelize": "^4.37.1"
   }
 }
