Updated database model, config.json and sequalize put in api route

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
       "username": "root",
-      "password": "yourpassword",
+      "password": "yours",
       "database": "college",
       "host": "localhost",
       "dialect": "mysql"
