Results automatically stored in DB, route for pulling results working

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
       "username": "root",
-      "password": "yours",
+      "password": "YOURPASSWORD",
       "database": "college",
       "host": "localhost",
       "dialect": "mysql"
